--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,10 @@
 
 *.db
 
+out
+classes
+target
+
 spring.properties
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
