--- a/pom.xml
+++ b/pom.xml
@@ -137,5 +137,11 @@
             <version>1.5.6</version>
         </dependency>
 
+        <!-- Commons Lang -->
+        <dependency>
+            <groupId>commons-lang</groupId>
+            <artifactId>commons-lang</artifactId>
+            <version>2.6</version>
+        </dependency>
     </dependencies>
 </project>
