--- a/pom.xml
+++ b/pom.xml
@@ -137,11 +137,16 @@
             <version>1.5.6</version>
         </dependency>
 
-        <!-- Commons Lang -->
+        <!-- Commons -->
         <dependency>
             <groupId>commons-lang</groupId>
             <artifactId>commons-lang</artifactId>
             <version>2.6</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-collections4</artifactId>
+            <version>4.1</version>
         </dependency>
     </dependencies>
 </project>
