--- a/src/main/resources/struts.properties
+++ b/src/main/resources/struts.properties
@@ -1,5 +1,7 @@
 struts.ui.theme=simple
 struts.serve.static=false
 struts.mapper.action.prefix.enabled=true
-struts.custom.i18n.resources=messages
 struts.objectFactory.spring.autoWire=type
+struts.custom.i18n.resources=messages
+struts.ognl.allowStaticMethodAccess=true
+struts.xwork.chaining.copyFieldErrors=true
